refactor(env): replace  cross-env by a simple consts file copied on build

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "build": "npm run clean && tsc && npm run swagger",
     "clean": "rimraf dist",
     "lint": "tslint ./src/**/*.ts ./test/**/*.ts",
+    "setup:env:dev": "node tools/setup-environment.js --env dev",
+    "setup:env:prod": "node tools/setup-environment.js --env prod",
     "format": "tsfmt -r",
-    "pretest": "cross-env NODE_ENV=test npm build && npm run lint",
-    "test": "cross-env NODE_ENV=test mocha",
     "test:coverage": "nyc npm test",
     "swagger": "swaggerGen -c ./swagger.config.json",
     "tsc": "tsc",
     "doc": "typedoc --out ./doc/ --name 'Typescript-rest-Boilerplate' --readme ./README.MD --module commonjs --target ES6 --includeDeclarations --excludePrivate --excludeExternals ./src"
+    "test:coverage": "nyc yarn test",
+    "test": "mocha",
   },
   "dependencies": {
     "typescript-rest": "^1.1.1",
@@ -28,7 +30,6 @@
     "@types/request": "0.0.43",
     "@types/cors": "^2.8.1",
     "chai": "^3.5.0",
-    "cross-env": "^4.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
     "nyc": "^10.3.2",
