refactor(scripts): organise commands

--- a/package.json
+++ b/package.json
@@ -5,20 +5,27 @@
   "repository": "https://github.com/vrudikov/typescript-rest-boilerplate.git",
   "license": "MIT",
   "scripts": {
-    "start": "./node_modules/.bin/ts-node src/index.ts",
-    "start:cluster": "./node_modules/.bin/ts-node src/cluster.ts",
-    "build": "npm run clean && tsc && npm run swagger",
+    "============================== Build =============================": "",
+    "------------------------------- Dev ------------------------------": "",
+    "start": "yarn ts-node src/index.ts",
+    "start:cluster": "yarn ts-node src/cluster.ts",
+    "----------------------------- Release ----------------------------": "",
+    "build": "yarn clean && tsc && yarn swagger",
     "clean": "rimraf dist",
-    "lint": "tslint ./src/**/*.ts ./test/**/*.ts",
+    "--------------------------- Environments -------------------------": "",
     "setup:env:dev": "node tools/setup-environment.js --env dev",
     "setup:env:prod": "node tools/setup-environment.js --env prod",
+    "============================== Utils =============================": "",
+    "--------------------------- Coding Style -------------------------": "",
     "format": "tsfmt -r",
-    "test:coverage": "nyc npm test",
+    "lint": "tslint ./src/**/*.ts ./test/**/*.ts",
+    "------------------------------- Doc ------------------------------": "",
+    "doc": "typedoc --out ./doc/ --name 'Typescript-rest-Boilerplate' --readme ./README.MD --module commonjs --target ES6 --includeDeclarations --excludePrivate --excludeExternals ./src",
     "swagger": "swaggerGen -c ./swagger.config.json",
-    "tsc": "tsc",
-    "doc": "typedoc --out ./doc/ --name 'Typescript-rest-Boilerplate' --readme ./README.MD --module commonjs --target ES6 --includeDeclarations --excludePrivate --excludeExternals ./src"
+    "============================== Tests =============================": "",
     "test:coverage": "nyc yarn test",
     "test": "mocha",
+    "pretest": "yarn build && yarn lint"
   },
   "dependencies": {
     "typescript-rest": "^1.1.1",
